created GCP config

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,16 +1,19 @@
 spring:
   application:
     name: SportBot
+  cloud:
+    gcp:
+      sql:
+        database-name: sportbot_db
+        instance-connection-name: sunny-might-465815-m2:us-central1:sportbotdb
   datasource:
-    url: jdbc:postgresql://localhost:5432/sportbot_db
-    username: postgres
-    password: postgres
+    username: test
+    password: test
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: true
 
   liquibase:
     enabled: true
