--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,14 +1,22 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:sportbot;MODE=PostgreSQL;DATABASE_TO_UPPER=false;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
     username: sa
     password:
+
   jpa:
     hibernate:
-      ddl-auto: none   # Important! Hibernate doesn't should create tables, Liquibase do it
-    show-sql: true
+      ddl-auto: create-drop     # схема из JPA-сущностей для тестов
+    defer-datasource-initialization: true   # <<< ВАЖНО: data.sql после создания схемы
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  liquibase:
+    enabled: false
+
   sql:
     init:
       mode: always
-      data-locations: classpath:changelog/changes/data.sql
+      data-locations: classpath:data.sql
