--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,6 +6,15 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
+name: Java CI with Maven
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+
 jobs:
   build:
     runs-on: ubuntu-latest
