--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/changelog/changes/0001-create-tables.sql
   - include:
       file: db/changelog/changes/0002-add-exercise-types.sql
+  - include:
+      file: db/changelog/changes/test-data.sql
