--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,4 +4,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/changes/0002-add-exercise-types.sql
   - include:
-      file: db/changelog/changes/test-data.sql
+      file: db/changelog/changes/0003-add-it-test-data.sql
+  - include:
+      file: db/changelog/changes/0004-add-cloud-test-data.sql
