--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,8 +7,8 @@ spring:
         database-name: sportbot_db
         instance-connection-name: sunny-might-465815-m2:us-central1:sportbotdb
   datasource:
-    username: test
-    password: test
+    username:
+    password:
     driver-class-name: org.postgresql.Driver
 
   jpa:
