fixed GCP exception, updated README.md

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -7,6 +7,8 @@ spring:
   cloud:
     gcp:
       sql:
-        enabled: false
+        enabled: off
+      core:
+        enabled: off
   liquibase:
     contexts: local
