--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/changes/0004-add-cloud-test-data.sql
   - include:
       file: db/changelog/changes/0005-add-motivations-test-data.sql
+  - include:
+      file: db/changelog/changes/0006-add-user-tags.sql
