implement pagination for ("/{exerciseCode}/by-dates") First page has 1 number by default now, not 0 Replaced pagination using @Pageable

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,11 @@ spring:
     show-sql: true
     open-in-view: false
 
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
+
   liquibase:
     enabled: true
     change-log: db/changelog/db.changelog-master.yaml
