--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/changes/0006-add-user-tags.sql
   - include:
       file: db/changelog/changes/0007-add-ranks.sql
+  - include:
+      file: db/changelog/changes/0008-add-subscriptions.sql
